tests/machine/x/ocaml/group_by_sort.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_by_sort.ml", line 41, characters 18-21:
41 |       __res1 := x.val :: !__res1;
                       ^^^
Error: Syntax error


Context (around line 41):
  39 |       __res0 := [("cat",g.key);("total",sum (let __res1 = ref [] in
  40 |   List.iter (fun x ->
  41 |       __res1 := x.val :: !__res1;
  42 |   ) g;
  43 | List.rev !__res1)
